Fix for overflow

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,7 +19,7 @@
 }
 
 html, body {
-	overflow: hidden;
+	overflow-x: hidden;
 }
 
 html, body, button, input, select, textarea,
